# boostedblob

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  test.sh  tox.ini
.github/workflows/: lint.yml
boostedblob/: __init__.py  __main__.py  _recover.py  azure_auth.py  azure_cloud.py  boost.py  cli.py  copying.py  delete.py  globals.py  google_auth.py  listing.py  path.py  path_registry.py  read.py  registry.py  request.py  share.py  syncing.py  write.py  xml.py
tests/: conftest.py  test_azure_cloud.py  test_boost.py  test_cli.py  test_copying.py  test_delete.py  test_listing.py  test_misc.py  test_path.py  test_path_ops.py  test_read_write.py  test_share.py  test_syncing.py
tests/helpers/: __init__.py  create.py  tmp_dir.py
