[project]
name = "boostedblob"
version = "0.16.0"
description = "Command line tool and async library to perform basic file operations on local paths, Google Cloud Storage paths and Azure Blob Storage paths."
authors = [{ name = "Shantanu Jain", email = "hauntsaninja@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiohttp>=3.7.2",
    "lxml>=4.9.1",
    "pycryptodomex>=3.9",
    "uvloop>=0.16.0 ; sys_platform != 'win32'",
]

[project.scripts]
bbb = "boostedblob.__main__:main"

[dependency-groups]
test = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.20.1",
    "pytest-cov>=4.0.0",
    "blobfile>=2.0.0",
    "urllib3",
    "filelock",
]
lint = [
    "ipdb",
    "black>=25,<26",
    "isort>=5.11.1,<6",
    "ruff>=0.11",
]
type = ["mypy==1.16.0"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise ValueError",
    "if config.debug_mode",
    "if TYPE_CHECKING",
]
omit = ["boostedblob/__main__.py"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
strict = true
no_warn_return_any = true
python_version = "3.9"
show_error_codes = true
enable_error_code = ["redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_untyped_calls = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = "xmltodict.*"
follow_imports = "skip"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C4", "PIE", "PLE"]
ignore = ["E2", "E501", "E741", "C408", "PIE790"]
